opam-version: "2.0"
version: "2025.10.06~dev"
maintainer: "guimartinez@microsoft.com"
authors: "Nik Swamy <nswamy@microsoft.com>,Jonathan Protzenko <protz@microsoft.com>,Tahina Ramananandro <taramana@microsoft.com>"
homepage: "http://fstar-lang.org"
license: "Apache-2.0"
depends: [
  "ocaml" {>= "4.14.0"}
  "batteries"
  "zarith" {>= "1.14"}
  "stdint"
  "yojson"
  "dune" {>= "3.8.0"}
  "memtrace" {>= "0.2.3"}
  "menhirLib"
  "menhir" {build & >= "20230415"}
  "mtime" {>= "2.1.0"}
  "pprint"
  "sedlex" {>= "3.5" }
  "ppxlib" {>= "0.36.0" }
  "process"
  "ppx_deriving" {build}
  "ppx_deriving_yojson" {build}
]
depexts: ["coreutils"] {os = "macos" & os-distribution = "homebrew"}
build: [
  [make "-j" jobs "ADMIT=1"]
]
install: [
  [make "PREFIX=%{prefix}%" "install"]
]
post-messages: [
  """
F* requires specific versions of Z3 to work correctly, and will refuse to run
if the version string does not match. You should have z3-4.8.5 and z3-4.13.3
in your $PATH. For details, see
https://github.com/FStarLang/FStar/blob/master/INSTALL.md#runtime-dependency-particular-version-of-z3.
""" {success}
]
dev-repo: "git+https://github.com/FStarLang/FStar"
bug-reports: "https://github.com/FStarLang/FStar/issues"
synopsis: "Verification system for effectful programs"
