(include_subdirs unqualified)
(library
 (name fstar_lib)
 (public_name fstar.lib)
 (libraries
    batteries
    zarith
    stdint
    yojson
    ppxlib
    dynlink
    menhirLib
    pprint
    process
    sedlex
 )
 (modes native byte)
 ; ^ Note: we need to compile fstar-lib in bytecode since some
 ; clients use it (e.g. MLS* when being compiled into javascript
 ; via js_of_ocaml, in general anything that wants to use js_of_ocaml).
 ; We should consider a toggle to selectively enable it, as most users
 ; do not need it.
 (wrapped false)
 (preprocess (pps ppx_deriving.show ppx_deriving_yojson sedlex.ppx))
)

(menhir
 (modules FStarC_Parser_Parse))

(rule
  (target FStarC_Version.ml)
  (deps (:script make_fstar_version.sh)
        (:version ../../version.txt))
  (action
    (progn
      (copy %{version} version.txt)
      (with-stdout-to
        FStarC_Version.ml
        (run bash %{script})))))
