(include_subdirs unqualified)
(executable
 (name fstar_zarith)
 (libraries
    fstar_lib
 )
 (link_flags "-linkall")
 (modules fstar_zarith)
 (modes (native exe))
 (enabled_if
   (= %{profile} zarith)
 )
)

(rule
  (target fstar_test.exe)
  (deps fstar_num.exe)
  (action
    (copy fstar_num.exe fstar_test.exe)
  )
  (enabled_if
    (= %{profile} test)
  )
)

(executable
 (name fstar_num)
 (libraries
    fstar_lib_num
 )
 (link_flags "-linkall")
 (modules fstar_num)
 (modes (native exe))
 (enabled_if
   (<> %{profile} zarith)
 )
)

(install
  (section bin)
  (files (fstar_%{profile}.exe as fstar.exe))
)
