; =============================================================================
; src/extracted/dune - Extracted OCaml files from F* sources
; =============================================================================
; 
; This directory contains .ml files extracted from F* source code.
; 
; The extraction process uses fstar --dep dune to generate dune rules,
; which are included via (include dune.extract.inc).
;
; Build flow:
;   1. Run: dune build @extract-stage1 (generates rules and extracts)
;   2. The extracted .ml files appear here
;   3. Stage1 copies them via (copy_files ../extracted/*.ml)

; Generate extraction rules using --dep dune
; This produces a dune file with (rule ...) stanzas for each F* file
; Note: We use relative paths (../../) to ensure the generated rules have relative paths
(rule
 (target dune.extract.inc)
 (deps
   (:fstar ../../stage0/out/bin/fstar.exe)
   (source_tree ../../ulib)
   (source_tree ../basic)
   (source_tree ../class)
   (source_tree ../data)
   (source_tree ../extraction)
   (source_tree ../fstar)
   (source_tree ../interactive)
   (source_tree ../parser)
   (source_tree ../prettyprint)
   (source_tree ../reflection)
   (source_tree ../smtencoding)
   (source_tree ../syntax)
   (source_tree ../tactics)
   (source_tree ../tosyntax)
   (source_tree ../typechecker)
   (source_tree ../tests))
 (action
  (with-stdout-to %{target}
   (run %{fstar} 
        --lax
        --MLish --MLish_effect FStarC.Effect
        --dep dune
        --include ../../ulib
        --include ../basic
        --include ../class
        --include ../data
        --include ../extraction
        --include ../fstar
        --include ../interactive
        --include ../parser
        --include ../prettyprint
        --include ../reflection
        --include ../smtencoding
        --include ../syntax
        --include ../tactics
        --include ../tosyntax
        --include ../typechecker
        --include ../tests
        --extract FStarC
        --extract +FStar.Pervasives
        --extract -FStar.Pervasives.Native
        ../fstar/FStarC.Main.fst))))

; Include the generated extraction rules
; Note: This is commented out until we have a working dune.extract.inc
; (include dune.extract.inc)

; Alias for extraction
(alias
 (name extract-stage1)
 (deps dune.extract.inc))
