; =============================================================================
; src/extracted/dune - Extracted OCaml files from F* sources
; =============================================================================
; 
; This directory contains .ml files extracted from F* source code.
; 
; The extraction process uses fstar --dep dune to generate dune rules.
; We generate TWO include files:
;   1. ulib.dune.inc - Verification rules for ulib (no MLish, no extraction)
;   2. fstarc.dune.inc - Verification + extraction rules for FStarC (with MLish)
;
; Build flow:
;   1. Run: dune build @extract-stage1 (generates rules and extracts)
;   2. The extracted .ml files appear here
;   3. Stage1 copies them via (copy_files ../extracted/*.ml)

; Common include paths
; Note: We use relative paths (../../) to ensure the generated rules have relative paths

; =============================================================================
; Step 1: Generate ulib verification rules (no MLish, no extraction)
; =============================================================================
; These rules verify ulib files and cache .checked.lax files.
; No extraction is performed (--extract 'OCaml:-*' --extract 'krml:-*').
; Note: FSTAR_EXE environment variable must be set to the path of fstar.exe
(rule
 (target ulib.dune.inc)
 (deps
   (source_tree ../../ulib))
 (action
  (with-stdout-to %{target}
   (run %{env:FSTAR_EXE=fstar.exe}
        --lax
        --dep dune
        --include ../../ulib
        --extract "OCaml:-*"
        --extract "krml:-*"
        ../../ulib/prims.fst
        ../../ulib/FStar.Pervasives.Native.fst
        ../../ulib/FStar.Pervasives.fsti
        ../../ulib/FStar.Pervasives.fst))))

; =============================================================================
; Step 2: Generate FStarC extraction rules (with MLish)
; =============================================================================
; These rules verify and extract FStarC modules using --MLish.
; The ulib .checked.lax files are assumed to exist (via --already_cached).
(rule
 (target fstarc.dune.inc)
 (deps
   (source_tree ../../ulib)
   (source_tree ../basic)
   (source_tree ../class)
   (source_tree ../data)
   (source_tree ../extraction)
   (source_tree ../fstar)
   (source_tree ../interactive)
   (source_tree ../parser)
   (source_tree ../prettyprint)
   (source_tree ../reflection)
   (source_tree ../smtencoding)
   (source_tree ../syntax)
   (source_tree ../tactics)
   (source_tree ../tosyntax)
   (source_tree ../typechecker)
   (source_tree ../tests))
 (action
  (with-stdout-to %{target}
   (run %{env:FSTAR_EXE=fstar.exe} 
        --lax
        --MLish --MLish_effect FStarC.Effect
        --dep dune
        --include ../../ulib
        --include ../basic
        --include ../class
        --include ../data
        --include ../extraction
        --include ../fstar
        --include ../interactive
        --include ../parser
        --include ../prettyprint
        --include ../reflection
        --include ../smtencoding
        --include ../syntax
        --include ../tactics
        --include ../tosyntax
        --include ../typechecker
        --include ../tests
        --extract FStarC
        --extract +FStar.Pervasives
        --extract -FStar.Pervasives.Native
        --extract "krml:-*"
        ../fstar/FStarC.Main.fst))))

; =============================================================================
; Include the generated extraction rules
; =============================================================================
; Note: These are commented out until we have working includes
; (include ulib.dune.inc)
; (include fstarc.dune.inc)

; Alias for extraction
(alias
 (name extract-stage1)
 (deps ulib.dune.inc fstarc.dune.inc))
