(include_subdirs unqualified)
(library
 (name fstarcompiler)
 (public_name fstar.compiler)
 (libraries
    batteries
    zarith
    stdint
    yojson
    ppxlib
    dynlink
    menhirLib
    pprint
    process
    sedlex
    mtime.clock
 )
 (modes native)
 (preprocess (pps ppx_deriving.show ppx_deriving_yojson sedlex.ppx))
)

(menhir
 (modules FStarC_Parser_Parse))
(menhir
 (modules FStarC_Parser_WarnError))

(rule
  (target FStarC_Version.ml)
  (deps (:script ../.scripts/make_version.py)
        (:version ../version.txt))
  (action
    (with-stdout-to FStarC_Version.ml
      (system "python %{script} %{version}"))))
